--- a/src/Presentation/TransactionUploader/TransactionUploader.csproj
+++ b/src/Presentation/TransactionUploader/TransactionUploader.csproj
@@ -23,6 +23,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\TransactionUploader.Application\TransactionUploader.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\TransactionUploader.Persistence\TransactionUploader.Persistence.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
