Implement base folder structure,  base entity; configure - ef, ef tools; remove unused default code

--- a/src/Infrastructure/TransactionUploader.Infrastructure/TransactionUploader.Infrastructure.csproj
+++ b/src/Infrastructure/TransactionUploader.Infrastructure/TransactionUploader.Infrastructure.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TransactionUploader.Common\TransactionUploader.Common.csproj" />
-    <ProjectReference Include="..\TransactionUploader.Domain\TransactionUploader.Domain.csproj" />
+    <ProjectReference Include="..\..\Core\TransactionUploader.Application\TransactionUploader.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
