--- a/src/Infrastructure/TransactionUploader.Persistence/TransactionUploader.Persistence.csproj
+++ b/src/Infrastructure/TransactionUploader.Persistence/TransactionUploader.Persistence.csproj
@@ -5,8 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\TransactionUploader.Common\TransactionUploader.Common.csproj" />
-    <ProjectReference Include="..\..\Core\TransactionUploader.Domain\TransactionUploader.Domain.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\TransactionUploader.Application\TransactionUploader.Application.csproj" />
   </ItemGroup>
 
 </Project>
