--- a/src/Presentation/TransactionUploader/TransactionUploader.csproj
+++ b/src/Presentation/TransactionUploader/TransactionUploader.csproj
@@ -14,6 +14,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -24,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\TransactionUploader.Application\TransactionUploader.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\TransactionUploader.Infrastructure\TransactionUploader.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\TransactionUploader.Persistence\TransactionUploader.Persistence.csproj" />
   </ItemGroup>
 
