--- a/src/Core/TransactionUploader.Application/TransactionUploader.Application.csproj
+++ b/src/Core/TransactionUploader.Application/TransactionUploader.Application.csproj
@@ -10,7 +10,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Csv\" />
+    <Folder Include="Transaction\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="CsvHelper" Version="15.0.5" />
+    <PackageReference Include="MediatR" Version="8.0.2" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.5.0" />
   </ItemGroup>
 
 </Project>
