Small refactoring and improvements

--- a/src/Core/TransactionUploader.Domain/TransactionUploader.Domain.csproj
+++ b/src/Core/TransactionUploader.Domain/TransactionUploader.Domain.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Transaction\Logic\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TransactionUploader.Common\TransactionUploader.Common.csproj" />
+  </ItemGroup>
+
 </Project>
