Implement base architecture (Angular part)

--- a/src/Presentation/TransactionUploader/ClientApp/src/tsconfig.server.json
+++ b/src/Presentation/TransactionUploader/ClientApp/src/tsconfig.server.json
@@ -4,6 +4,7 @@
     "module": "commonjs"
   },
   "angularCompilerOptions": {
-    "entryModule": "app/app.server.module#AppServerModule"
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
   }
 }
