--- a/src/Presentation/TransactionUploader/ClientApp/tsconfig.json
+++ b/src/Presentation/TransactionUploader/ClientApp/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
     "module": "esnext",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
@@ -16,6 +15,14 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "baseUrl": "src",
+    "paths": {
+      "@core/*":   ["app/core/*"],
+      "@shared/*": ["app/shared/*"],
+      "@module/*": ["app/module/*"],
+      "@layout/*": ["app/layout/*"],
+      "@data/*":   ["app/data/*"]
+    }
   }
 }
