--- a/src/Presentation/TransactionUploader/appsettings.json
+++ b/src/Presentation/TransactionUploader/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UploaderConnection": "your connection string"
+  }
 }
